--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,10 +14,6 @@ p, h2, ul {
   margin-block-end: 0.5em;
 }
 
-h1, h2 {
-  text-decoration: underline $main-color;
-}
-
 a:active, /* активная/посещенная ссылка */
 a:hover,  /* при наведении */
 a {
@@ -40,10 +36,6 @@ footer {
 
   h1, h2, h3, h4, p {
     color: $invert-color;
-  }
-
-  h1, h2 {
-    text-decoration: underline $invert-color;
   }
 }
 
@@ -89,10 +81,20 @@ main {
         align-items: center;
         color: $main-color;
 
-        p {
-          color: black;
-          margin-left: 2vh;
+        span.icons * {
+          margin-right: 3px;
+          color: $main-color;
         }
+      }
+
+      & > div p {
+        color: black;
+        margin-left: 2vh;
+      }
+
+      & > div a {
+        color: $main-color;
+        margin-left: 2vh;
       }
     }
 
@@ -132,16 +134,17 @@ main {
     }
   }
 
-  h1, h2, h3, h4 {
+  h1, h2 {
     color: $main-color;
+    text-shadow: 0 0 1.5px $main-color;
   }
 }
 
 section.my-projects,
 section.certificates {
   article {
-    margin: 10px;
-    padding: 5px;
+    margin: 15px;
+    padding: 5px 15px;
     box-shadow: 2px 2px 5px gray;
     display: grid;
     grid-template: auto auto / 1fr auto;
@@ -149,6 +152,10 @@ section.certificates {
 
     p {
       line-height: 2em;
+    }
+
+    h3 {
+      color: black;
     }
   }
 
@@ -161,5 +168,31 @@ section.certificates {
 @media (max-width: 600px) {
   main {
     display: block;
+
+    & > aside > section.flex-list {
+      &.skills {
+        ul > li {
+          padding: 1.5vw;
+          border-radius: 5px;
+          color: $invert-color;
+          background-color: $main-color;
+          box-shadow: 0 0 5px $main-color;
+        }
+      }
+
+      ul {
+        display: flex;
+        flex-flow: row wrap;
+        list-style-type: none;
+
+        li {
+          margin: 1.5vw;
+        }
+      }
+    }
   }
+}
+
+section.my-projects > .title {
+  font-weight: 900;
 }
